src/test/ui/unsized-locals/by-value-trait-object-safety.stderr
warning: the feature `unsized_locals` is incomplete and may cause the compiler to crash
  --> $DIR/by-value-trait-object-safety.rs:1:12
   |
LL | #![feature(unsized_locals)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: the `foo` method cannot be invoked on a trait object
  --> $DIR/by-value-trait-object-safety.rs:20:7
   |
LL |         Self: Sized;
   |               ----- this has a `Sized` requirement
...
LL |     x.foo();
   |       ^^^

error: aborting due to previous error; 1 warning emitted

